output probiert, ruhelagen probiert

--- a/helirack.ipynb
+++ b/helirack.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +84,8 @@
      "text": [
       "Maximaler absoluter Fehler in Modellgleichung (euklidische Norm): 4.263257318062316e-14\n",
       "Maximaler relativer Fehler in Modellgleichung (euklidische Norm): 4.1990843077137303e-16\n",
-      "Maximaler absoluter Fehler in Ausgangsgleichung (euklidische Norm): 154.5423966540935\n",
-      "Maximaler relativer Fehler in Ausgangsgleichung (euklidische Norm): 1.0\n"
+      "Maximaler absoluter Fehler in Ausgangsgleichung (euklidische Norm): 2.099207044214957e-05\n",
+      "Maximaler relativer Fehler in Ausgangsgleichung (euklidische Norm): 2.475239078516534e-07\n"
      ]
     }
    ],
